--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.catalystitservices</groupId>
-	<artifactId>test-container-insert</artifactId>
+	<artifactId>test-change-with-item</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
@@ -14,7 +14,7 @@
 	</properties>
 
 	<build>
-		<finalName>test-insert</finalName>
+		<finalName>test-change</finalName>
 
 		<plugins>
 			<plugin>
